--- a/styles/header.css
+++ b/styles/header.css
@@ -28,7 +28,7 @@ header{
     width: 100%;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background:linear-gradient(to left,rgb(55, 105, 255),rgb(0, 0, 61));
     color: white;
 }
@@ -45,12 +45,13 @@ header > nav > ul > li{
 }
 
 header > nav > ul > li > a{
-    transition: 0.7s;
+    transition: 0.3s;
     text-wrap: nowrap;
 }
 
 header > nav > ul > li > a:hover{
-    border-top: 2px solid gray;
+    color: rgb(0, 0, 48);
     cursor: pointer;
+    
 }
 
