--- a/styles/center.css
+++ b/styles/center.css
@@ -23,7 +23,7 @@
 
 
 #main-container{
-    background: linear-gradient(to left,rgb(0, 38, 108),rgb(92, 147, 249));
+    background:linear-gradient(to left,rgb(55, 105, 255),rgb(0, 0, 61));
     width: 100%;
     display: flex;
     align-items: center;
@@ -31,9 +31,9 @@
 }
 
 #content{
-    background: linear-gradient(to right,rgb(0, 38, 108),rgb(2, 63, 175));
+    background-color: rgb(213, 223, 255);
     width: 90%;
     box-shadow: 1px 1px 1px black;
-    border-radius: 20px;
+    border-radius: 10px;
     transition: 5s linear-gradient;
 }
