Estilizado a parte de personagens
Para um melhor responsividade no site e tambem adicionado os links para meus perfis

--- a/styles/center.css
+++ b/styles/center.css
@@ -36,4 +36,5 @@
     box-shadow: 1px 1px 1px black;
     border-radius: 10px;
     transition: 5s linear-gradient;
+    backdrop-filter: blur(20px);
 }
