--- a/styles/header.css
+++ b/styles/header.css
@@ -32,22 +32,84 @@ header{
 header > nav > ul{
     display: flex;
     flex-direction: row;
+    width: 30vw;
 }
 
 header > nav > ul > li{
     display: flex;
     margin-inline: 4%;
+    position: relative;
+    
 
 }
 
 header > nav > ul > li > a{
-    transition: 0.3s;
+    color: rgb(157, 173, 255);
     text-wrap: nowrap;
+    transition: transform 0.5s,color 0.5s;
 }
 
 header > nav > ul > li > a:hover{
-    color: rgb(0, 0, 48);
+    transform: translate(-5px,-5px) scale(1.2);
     cursor: pointer;
+    color: white;
+}
+
+header > nav > ul > li > a:hover::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    animation: biger 0.6s  forwards;
     
+    
+}
+
+#x:hover{
+    animation: exe 1s infinite;
+    font-weight: bolder;
+}
+
+@keyframes biger {
+    from{
+        left:-130%;
+        border-bottom: 2px solid white;
+        
+    }
+
+    to{
+        left: 0;
+        opacity: 1;
+        width: 100%;
+        border-bottom: 2px solid white;
+        border-top: 2px solid white;
+    }
+
+}
+
+@keyframes exe {
+    0%{
+        color: yellow;
+    }
+
+    20%{
+        color: blue;
+    }
+
+    40%{
+        color: rgb(157, 0, 255);
+    }
+
+    60%{
+        color: red;
+    }
+
+    80%{
+        color: rgb(0, 255, 0);
+    }
+
+    100%{
+        color: rgb(239, 43, 197);
+    }
+
 }
 
