--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,6 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Anta", sans-serif;
-    overflow-x: hidden;
+    overflow: visible;
 }
 
